Fix: Navbar alignment in sidebar

--- a/src/scss/lexicon-base/variables/_sidebar.scss
+++ b/src/scss/lexicon-base/variables/_sidebar.scss
@@ -1,3 +1,15 @@
+$sidebar-padding-bottom: 24px !default;
+$sidebar-padding-left: 24px !default;
+$sidebar-padding-right: 24px !default;
+$sidebar-padding-top: 24px !default;
+
+$sidebar-padding: $sidebar-padding-top $sidebar-padding-right $sidebar-padding-bottom $sidebar-padding-left !default;
+
+$sidebar-navbar-gutter-left: lx-sidebar-navbar-gutter($sidebar-padding-left) !default;
+$sidebar-navbar-gutter-right: lx-sidebar-navbar-gutter($sidebar-padding-right) !default;
+
+// Skin
+
 $sidebar-default-bg: $navbar-default-bg !default;
 $sidebar-default-border: $navbar-default-border !default;
 $sidebar-default-color: $navbar-default-color !default;
